--- a/arch/arm/boot/dts/qcom/mdm9607.dtsi
+++ b/arch/arm/boot/dts/qcom/mdm9607.dtsi
@@ -563,11 +563,10 @@
 		status = "disabled";
 	};
 
-	qcom,cnss-sdio {
+	cnss_sdio: qcom,cnss-sdio {
 		compatible = "qcom,cnss_sdio";
-		reg = <0x87a00000 0x200000>;
-		reg-names = "ramdump";
 		subsys-name = "AR6320";
+		qcom,wlan-ramdump-dynamic = <0x200000>;
 		vdd-wlan-supply = <&rome_vreg>;
 		vdd-wlan-dsrc-supply = <&sdcard_ext_vreg>;
 		vdd-wlan-io-supply = <&mdm9607_l11>;
