ARM: dts: msm: Use system time for PPS on MDM9x50 TTP boards
Use the system time instead of monotonic boot time in
the PPS timestamp on MDM9x50 TTP boards. This is needed
for using NTP tools with PPS.

Change-Id: Id47b57a4a9d37ca858d665e86c2362d50b8c3816
Signed-off-by: Gustavo Solaira <gustavos@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/mdm9650-ttp.dts
+++ b/arch/arm/boot/dts/qcom/mdm9650-ttp.dts
@@ -28,11 +28,27 @@
 };
 
 &soc {
+	tlmm_pinmux: pinctrl@1000000 {
+		i2c_1 {
+			i2c_1_active {
+				config {
+					pins = "gpio2", "gpio3";
+					drive-strength = <2>;
+					bias-pull-up;
+				};
+			};
+		};
+	};
+
 	usb_detect {
 		compatible = "qcom,gpio-usbdetect";
 		interrupt-parent = <&spmi_bus>;
 		interrupts = <0x0 0x0d 0x0>; /* PMD9655 VBUS DETECT */
 		interrupt-names = "vbus_det_irq";
+	};
+
+	pps {
+		use-system-time-ts;
 	};
 };
 
