drivers: dts_eagle software driver port
Ainur audio presents a port of DTS' software-processed driver
for any arm Android device, can be side-by-side built alongside
the hardware-processed driver, and is compatible with the DTS
Ultra:X userland port.

Signed-off-by: Laster K. (lazerl0rd) <officiallazerl0rd@gmail.com>

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -215,4 +215,7 @@ source "drivers/devkit/lcdkit/Kconfig"
 source "drivers/devkit/tpkit/Kconfig"
 
 source "drivers/devkit/audiokit/Kconfig"
+
+source "drivers/dts_eagle/Kconfig"
+
 endmenu
