--- a/arch/arm/boot/dts/qcom/huawei_msm8940_bah_l01_va/huawei-tp.dtsi
+++ b/arch/arm/boot/dts/qcom/huawei_msm8940_bah_l01_va/huawei-tp.dtsi
@@ -70,6 +70,7 @@
 		parade: touchscreen@24 {
 			status = "ok";
 			compatible = "parade";
+			touch_driver = "parade";
 			reg = <0x24>;
 			slave_address = <0x24>;
 			parade,adapter_id = "cyttsp5_i2c_adapter";
