--- a/drivers/devkit/tpkit/panel/Makefile
+++ b/drivers/devkit/tpkit/panel/Makefile
@@ -1,18 +1,6 @@
-# Makefile for the irda drivers.
+# Makefile for touchscreen driver configuration
 #
 
-# Each configuration option enables a list of files.
-
-#obj-$(CONFIG_CYPRESS_TS_KIT)  += cypress/
-obj-$(CONFIG_FOCAL_TS_KIT)  += focaltech/
-obj-$(CONFIG_SYNAPTICS_TS_KIT)  += synaptics/
-obj-$(CONFIG_PARADE_TS_KIT)  += parade/
-obj-$(CONFIG_NOVATEK_TS_KIT)  += novatek/
-obj-$(CONFIG_ILITEK_TS_KIT)  += ilitek/
 obj-$(CONFIG_HIMAX_TS_KIT)  += himax/
-obj-$(CONFIG_GOODIX_TS_KIT)  += goodix/
 obj-$(CONFIG_NOVATEK_HYBRID_TS_KIT)  += novatek_hybrid/
-#ifeq ($(CONFIG_HUAWEI_TS_TEST),y)
-#EXTRA_CFLAGS += -DHUAWEI_TOUCHSCREEN_TEST
-#endif
-#EXTRA_CFLAGS += -Idrivers/hisi/tzdriver
+obj-$(CONFIG_PARADE_TS_KIT)  += parade/
