--- a/arch/arm64/configs/bach_defconfig
+++ b/arch/arm64/configs/bach_defconfig
@@ -4267,7 +4267,7 @@ CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
 CONFIG_SCHEDSTATS=y
 CONFIG_SCHED_STACK_END_CHECK=y
-CONFIG_TIMER_STATS=y
+# CONFIG_TIMER_STATS is not set
 # CONFIG_DEBUG_MODULE_SCAN_OFF is not set
 # CONFIG_DEBUG_TASK_STACK_SCAN_OFF is not set
 # CONFIG_DEBUG_PREEMPT is not set
